--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Vasiliy Horbachenko <shadow.prince@ya.ru>"]
 
 [dependencies]
 cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
-td_rlua = "0.1.0"
+hlua = "0.1"
 
