--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["Vasiliy Horbachenko <shadow.prince@ya.ru>"]
 [dependencies]
 cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }
 hlua = "0.1"
-
+clap = "*"
